--- a/frontend/src/components/VideoComponents/styles/VideoStrip.module.css
+++ b/frontend/src/components/VideoComponents/styles/VideoStrip.module.css
@@ -9,6 +9,16 @@
     padding: 1rem;
 }
 
+.single_video {
+    position: fixed;
+    bottom: 1rem;
+    left: 0;
+    transform: translateX(-80%);
+    background-color: rgba(17, 24, 39, 0.9);
+    border-radius: 0.75rem;
+    padding: 1rem;
+}
+
 .grid {
     display: flex;
     gap: 1rem;
