--- a/frontend/src/Pages/Dashboard/style.css
+++ b/frontend/src/Pages/Dashboard/style.css
@@ -9,7 +9,7 @@
     color: skyblue;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px 0;
+    grid-gap: 20px ;
 }
 
 .space-text{
