--- a/frontend/src/Pages/Home/page.module.css
+++ b/frontend/src/Pages/Home/page.module.css
@@ -5,4 +5,23 @@
   background-color: #2C3E50;
   color: #ffffff;
 }
+::-webkit-scrollbar {
+  width: 10px;
+  margin: 10px;
+}
 
+::-webkit-scrollbar-track{
+  padding: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 100%;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.575);
+}
+
+::-webkit-slider-thumb:hover {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.915);
+}
