--- a/frontend/src/Pages/VirtualSpace/room.css
+++ b/frontend/src/Pages/VirtualSpace/room.css
@@ -21,7 +21,7 @@ body {
     background-color: var(--primary-bg);
 }
 
-.container {
+.room_container {
     width: 100%;
     height: 100vh;
     display: flex;
