--- a/frontend/src/components/DashHeader/style.css
+++ b/frontend/src/components/DashHeader/style.css
@@ -6,6 +6,26 @@
     background-color: #2C3E50;
 }
 
+.user_details{
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.user_details_name {
+    font-size: 15px;
+    font-weight: 700;
+    color: white;
+}
+
+.user_details_email{
+    font-size: 10px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.548);
+}
+
 .search-box {
     display: flex;
     align-items: center;
