--- a/frontend/src/components/Toast/Toast.css
+++ b/frontend/src/components/Toast/Toast.css
@@ -12,7 +12,7 @@
 .toast-success {
     width: 300px;
     height: 40px;
-    background-color: green;
+    background-color: rgb(0, 93, 36);
     color: white;
     border: 2px solid white;
     border-radius: 10px;
