--- a/frontend/src/components/RoomHeader/roomheader.css
+++ b/frontend/src/components/RoomHeader/roomheader.css
@@ -5,7 +5,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    box-shadow: 5px 5px 5px 5px#E74C3C;
 }
 
 .copy_link_btn{
@@ -26,4 +25,13 @@
     color: rgba(255, 255, 255, 0.5);
     opacity: 0.5;
 
+}
+
+.back_ele{
+    width: 82%;
+    height: 100%;
+    display: flex;
+    gap: 20px;
+    justify-content: flex-end;
+    align-items: center;
 }
